# patrimonio

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  tox.ini
app/: config.py  db.py  main.py  money.py  templates_env.py
app/i18n/: __init__.py  en.json  pt.json
app/models/: __init__.py  tables.py
app/routers/: acoes.py  acoes_us.py  configuracoes.py  contas.py  divisao.py  ir.py  locale.py  movimentos.py  overview.py  projecao.py  recorrentes.py
app/schemas/: forms.py
app/services/: accounts.py  balances.py  division.py  ir.py  ledger.py  networth.py  people.py  projection.py  recurring.py  stocks.py  usd.py  valuations.py
app/templates/: base.html
docker/: entrypoint.sh  migrate.py
docs/: alembic.md  deploy.md
migrations/: env.py
migrations/versions/: 07dadb45adca_add_notes_to_recurringrule.py  431a21cdf5a7_add_account_type_to_account.py  58acbef039a3_add_tags_to_recurringrule_and_txn.py  5bc3c320d74d_add_net_before_taxes_cents_to_person.py  62ffbe44ad3b_add_resolution_tracking_fields_to_txn.py  711d278f96eb_add_accountvaluation_table.py  a60a75947b00_add_end_period_to_recurringrule.py  ae3df59b2480_baseline_schema.py  c2e5ec2655b5_person_ir_rate_replaces_ir_cents_and_.py  d3f4f5ceb021_add_txnnote_table.py  fa2e995aa295_add_net_before_taxes_avg_cents_to_person.py
tests/: conftest.py
tests/integration/: test_acoes.py  test_conta_detail.py  test_inline_edit.py  test_locale.py  test_movimentos.py  test_pages.py  test_projecao_ir.py  test_recorrentes.py  test_valuations.py
tests/unit/: test_accounts.py  (+13 more)
(+44 files in other folders)
