[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "patrimonio"
version = "0.1.0"
description = "Household wealth tracker"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlmodel",
  "alembic",
  "jinja2",
  "pydantic-settings",
  "python-multipart",
]

[project.optional-dependencies]
dev = [
  "ruff",
  "pyright",
  "pytest",
  "pytest-cov",
  "httpx",
  "tox",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests", "docker"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["B008"]  # FastAPI Depends() in default args is the intended pattern

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["app", "tests", "docker"]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
addopts = "-q --strict-markers --cov=app --cov-report=term-missing"
testpaths = ["tests"]
markers = [
  "unit: pure service/domain tests, no DB or HTTP",
  "integration: exercise routers/DB via TestClient",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
